force-app/main/default/objects/custom_create212__c/custom_create212__c.object-meta.xml
<CustomObject>
    <label>Custom created object212</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects212</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>