force-app/main/default/objects/custom_create212__c/fields/custom_create_212field583__c.field-meta.xml
<CustomField>
    <fullName>custom_create_212field583__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 212field583</label>
    <type>Checkbox</type>
</CustomField>